Fix Select2 overflow behaviour

--- a/src/pretalx/static/orga/scss/_select.scss
+++ b/src/pretalx/static/orga/scss/_select.scss
@@ -44,6 +44,7 @@
       .select2-selection__rendered {
         display: inline-flex;
         margin-bottom: 0;
+        max-width: 100%;
       }
 
     }
